fixed some bugs

--- a/login.html
+++ b/login.html
@@ -16,10 +16,12 @@
       <p>
         <input type="password" id="password" name="password" placeholder="Password" required>
       </p>
+      
       <p>
         <button type="submit" id="login">Login</button>
       </p>
     </form>
+    <div id="login-error-message"></div>
     <div id="create-account-wrap">
       <p>Not a member? <a href="register.html">Create Account</a><p>
     </div>
